[gd_scene load_steps=3 format=3 uid="uid://lpdqmurl6ajw"]

[ext_resource type="Script" path="res://scripts/pick_up_area.gd" id="1_t7r0u"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xvsj1"]
radius = 5.0

[node name="PickUpArea" type="Area2D"]
script = ExtResource("1_t7r0u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_xvsj1")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
